--- a/python/superagent/lib/numbers.pug
+++ b/python/superagent/lib/numbers.pug
@@ -1,5 +1,6 @@
+|# Python的一些相关函数
 if number
-    |# number相关的函数
+    |## number相关的函数
     |
     each val,index in number
         each va,ind in val.title
@@ -25,7 +26,7 @@ if number
         |
         |
 if string
-    |# string相关的函数
+    |## string相关的函数
     |
     each val,index in string
         ||序号|方法|描述|
@@ -41,7 +42,7 @@ if string
         |
         |
 if list
-    |# list相关的函数
+    |## list相关的函数
     |
     each val,index in list
         ||序号|方法|描述|
@@ -57,7 +58,7 @@ if list
         |
         |
 if dict
-    |# dict相关的函数
+    |## dict相关的函数
     |
     each val,index in dict
         ||序号|方法|描述|
